--- a/fotos/Plantilla.html
+++ b/fotos/Plantilla.html
@@ -378,6 +378,7 @@ C = \frac{{C_u \cdot P + C_d \cdot (1 - P)}}{{1 + R_f}}
 <p>Con estos datos se calculó el VPN para los 4 casos obteniendo que el periodo actual tiene la mejor política de crédito. Los resultados se muestran a continuación.</p>
 <p><br>
 <img src="Captura%20de%20Pantalla%202023-10-26%20a%20la(s)%2016.14.40.png" class="img-fluid"></p>
+<p>Con respecto a la segunda pregunta, esta se omitió dado que la afirmación del enunciado es erronea, tanto en el ejemplo propuesto en el libro como en del trabajo presentado, las tasas de incumplimiento y costos administrativos en el caso 3 son mayores que el caso 2.</p>
 </section>
 </section>
 
